--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hubot-rules": "^0.1.2",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
-    "hubot-slack": "^4.5.3"
+    "hubot-slack": "^4.5.3",
+    "coffee-script": "^1.12.6"
   },
   "engines": {
     "node": "0.10.x"
